# ECE461-Phase2-Model-Manager

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  dependencies.txt  dynamoDB_sample.txt  dynamoDB_sample_filled.txt  lambda-requirements.txt  payload.json  pyproject.toml  run  test_runner.py  text_url.txt
.github/workflows/: deploy-delete-reset.yml  deploy-lambda.yml  deploy-lambdas.yml  deploy-vercel.yml  integration-tests.yml  unittest.yml
dockerfiles/: Dockerfile.lambda  dockerfile.delete  dockerfile.enqueue_rate  dockerfile.example  dockerfile.health  dockerfile.metadata  dockerfile.rate  dockerfile.reset  dockerfile.search  dockerfile.upload
frontend/: .env.local  package-lock.json  package.json
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  @vercel.js  aria-hidden.js  class-variance-authority.js  clsx.js  framer-motion.js  get-nonce.js  lucide-react.js  motion-dom.js  motion-utils.js  react-remove-scroll-bar.js  react-remove-scroll.js  react-style-singleton.js  tailwind-merge.js  tslib.js  use-callback-ref.js  use-sidecar.js
frontend/.next/static/chunks/: _app-pages-browser_node_modules_next_dist_client_dev_noop-turbopack-hmr_js.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 32f2f2151a000a7d.webpack.hot-update.json  b9981cb3c48fe9fd.webpack.hot-update.json  webpack.32f2f2151a000a7d.hot-update.js  webpack.4112ac45a18bc9a5.hot-update.js  webpack.4f2cac6447a288b8.hot-update.js  webpack.52e4bc9b884e9acf.hot-update.js  webpack.6411caf0403f5892.hot-update.js  webpack.6f096465942d7e55.hot-update.js  webpack.708bc08fa1338b67.hot-update.js  webpack.97fc6243150fe6d4.hot-update.js  (+8 more)
frontend/app/: layout.tsx  page.tsx
frontend/components/registry/: search-tab.tsx  upload-tab.tsx
frontend/lib/: registry-api.ts
scripts/: backfill_lineage.py
src/: __main__.py  config.py  database.py  delete_artifact_lambda.py  delete_cli.py  download.py  download_manager.py  dummydb.py  enqueue_rate.py  health.py  infer_dataset.py  metadata.py  metric.py  rate.py  reset_cli.py  reset_registry_lambda.py  search.py  security.py  upload.py  url_parser.py  workflow.py
src/metrics/: bus_factor.py  code_quality.py  dataset_and_code.py  dataset_quality.py  graphql_queries.py  license.py  performance_claims.py  ramp_up_time.py  reproducibility.py  reviewedness.py  size_metric.py  tree_score.py
tests/: test_bus_factor_metric.py  test_code_quality.py  test_config.py  test_database.py  test_database_inference.py  test_dataset_and_code_availability.py  test_dataset_quality.py  test_download.py  test_download_manager.py  test_license_metric.py  test_metadata_lambda.py  test_metrics.py  test_performance_claims.py  test_ramp_up.py  test_reproducibility.py  test_reviewedness.py  test_search.py  test_security.py  test_size_metric.py  test_tree_score.py  test_upload.py  test_url_parser.py  test_workflow_core.py
tests-integration/: test_artifacts.py  test_health.py  test_rate.py  test_rate_invalid.py  test_reset_delete.py  test_search_live.py
tests/integration_tests/: test_endpoints.py
tests/sample_licenses/: MIT.txt
(+32 files in other folders)
