[tool.poetry]
name = "Huggingface-Model-Manager"
version = "0.0.1"
packages = [
    {include = "metric.py", from = "src"},
    {include = "workflow.py", from = "src"},
    {include = "database.py", from = "src"},
    {include = "config.py", from = "src"},
    {include = "download_manager.py", from = "src"},
    {include = "code_quality.py", from = "src/metrics"},
    {include = "bus_factor.py", from = "src/metrics"},
    {include = "license.py", from = "src/metrics"}
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*"
]