[tool.poetry]
name = "Huggingface-Model-Manager"
version = "0.0.1"
packages = [
    {include = "metric.py", from = "src"},
    {include = "workflow.py", from = "src"},
    {include = "database.py", from = "src"},
    {include = "config.py", from = "src"},
    {include = "download_manager.py", from = "src"},
    {include = "code_quality.py", from = "src/metrics"},
    {include = "bus_factor.py", from = "src/metrics"},
    {include = "license.py", from = "src/metrics"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "^0.20.0"
pydantic = "^2.12.3"
sortedcontainers = "^2.4.0"
poetry = "^2.2.1"
coverage = {extras = ["toml"], version = "^7.11.0"}
pylint = "^4.0.2"
toml = "^0.10.2"
spdx-license-matcher = "^1.0.10"
dotenv = "^0.9.9"
torch = "^2.9.0"
transformers = "^4.57.1"
accelerate = "^1.11.0"
huggingface-hub = "^0.35.3"
gitpython = "^3.1.45"
spdx-matcher = "^0.1.3"
boto3 = "^1.40.67"
botocore = "^1.40.67"
moto = "^5.1.16"
hf-xet = "^1.2.0"
typing-extensions = "^4.15.0"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*"
]

[tool.frontend]
# npm dependencies needed for the React/TSX code under /frontend (documented here; install with npm/yarn)
manager = "npm"
packages = [
    "next@latest",
    "react@latest",
    "react-dom@latest",
    "framer-motion@latest",
    "lucide-react@latest",
    "@types/react@latest",
    "@types/react-dom@latest",
]


[tool.pytest.ini_options]
python_files = [
    "tests/test_*.py"
]
testpaths = [
    "tests"
]
